# GitLingo

./: .pre-commit-config.yaml  README.md  pyproject.toml
app/: __main__.py
app/logs/: get_log.py
app/schema/: __init__.py  schema.py
